--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,19 @@ exceptiongroup==1.1.3
 h11==0.14.0
 httptools==0.6.1
 idna==3.4
+iniconfig==2.0.0
+packaging==23.2
+pluggy==1.3.0
 pydantic==2.4.2
 pydantic-core==2.10.1
+pytest==7.4.3
 python-dotenv==1.0.0
 PyYAML==6.0.1
 rating-geo-finder @ file:///Users/kierancornwall/workspace/WTD/rating-geo-finder-project
 requests==2.31.0
 sniffio==1.3.0
 starlette==0.27.0
+tomli==2.0.1
 typing-extensions==4.8.0
 urllib3==2.0.6
 uvloop==0.19.0
